# LoxLang

./: .gitignore  Cargo.toml  README.MD
src/: grammar.bnf  lib.rs  result.rs
src/cli/: mod.rs  run.rs
src/core/: lox.rs
src/fixtures/: ex1.lox
src/frontend/: keywords.rs  mod.rs  parser.rs  scanner.rs  token.rs
src/frontend/ast/: expr.rs
