[package]
name = "lox"
version = "0.1.0"
authors = ["xiangGao <hello@baoziv587.com>"]
edition = "2018"

[lib]
name ="lox"
path ="src/lib.rs"

[dependencies]
log ="0.4.6"
lazy_static = "1.3.0"
clap = "2.33.0"
pretty_env_logger = {version="0.3",optional=true}
env_logger = {version="0.6.1"}


[dev-dependencies]
env_logger = "0.6.1"
pretty_env_logger = {version="0.3"}

[[bin]]
name = "lox"
test = false
doc = false
path = "src/bin/lox/main.rs"


[features]
pretty-env-logger = ['pretty_env_logger']